@@ -1,3 +1,9 @@
+globus-gridftp-server (7.16-1+gt6.@distro@) @distro@; urgency=low
+
+  * don't attempt to get retransmit count on http transfer
+
+ -- Globus Toolkit <support@globus.org>  Sun, 16 Nov 2014 14:43:44 -0600
+
 globus-gridftp-server (7.15-1+gt6.@distro@) @distro@; urgency=low
 
   * Remove reference to Globus::Core::Paths
